--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/jahani/todo-list-dapp#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.1"
+    "@openzeppelin/contracts": "^4.3.1",
+    "@truffle/hdwallet-provider": "^1.5.0",
+    "dotenv": "^10.0.0"
   }
 }
