--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.1",
     "@truffle/hdwallet-provider": "^1.5.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "truffle-assertions": "^0.9.2"
   }
 }
