--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@drizzle/store": "^1.5.3",
     "@drizzle/vue-plugin": "^0.1.0",
+    "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
     "prettier": "^1.18.2",
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
