--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@drizzle/vue-plugin": "^0.1.0",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
+    "moment": "^2.29.1",
     "prettier": "^1.18.2",
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
